--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,16 @@ tasks:
     command: python manage.py runserver 0.0.0.0:8080
 ports:
   - port: 8080
-    onOpen: open-preview
+    name: "Backend Server"
+    onOpen: open-browser
+    visibility: public
+  - port: 3306
+    name: "MySQL Server"
+    onOpen: ignore
+    visibility: public
+  - port: 27017
+    name: "MongoDB Server"
+    onOpen: ignore
     visibility: public
 
 vscode:
